# messageit

./: .gitignore  README.md  requirements.txt  setup.cfg
docs/: active-command.adoc  messageit-model.mdj  models.mdj
docs/html-docs/contents/: element_index.html  navigation.html
src/messageit/: __init__.py  _core.py  _message.py  _messagebus.py  _protocols.py  _publisher.py  _registry.py
src/messageit/examples/ex1/: __main__.py
src/messageit/examples/ex2/: __main__.py  v1.py  v2.py  v3.py  v4.py  v5.py
src/tests/: test_core.py  test_message.py  test_messagebus.py  test_messageloop.py  test_publisher.py  test_registry.py
src/tests/features/: messagebus.feature  messageloop.feature
src/tests/unit/: test_explore_defaultdict.py  test_subscriber.py
