[metadata]
name = messageit
version = attr: messageit.__version__

description = Message driven programming for Python
long_description = file: README.md
url=https://github.com/ivangeorgiev/messageit

author=Ivan Georgiev
author_email=ivan.georgiev@gmail.com

# keywords = one, two
license = Creative Commons Zero v1.0 Universal
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages=find:
# install_requires =
#     requests
#     importlib-metadata; python_version<"3.8"

# [options.package_data]
# * = *.txt, *.rst
# hello = *.msg

# [options.entry_points]
# console_scripts =
#     executable-name = my_package.module:function

# [options.extras_require]
# pdf = ReportLab>=1.2; RXP
# rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
where=src
exclude =
    tests*
#     tools*
#     docs*
#     my_package.tests*

[tool:pytest]
# pythonpath=src
testpaths =
    src/tests
